src/objects/Spend_Milestone__c.object
<CustomObject>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <description>How to test/determine if the deliverable criteria have been met.</description>
        <inlineHelpText>How to test/determine if the deliverable criteria have been met.</inlineHelpText>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Spend__c</fullName>
        <label>Project Spend</label>
        <referenceTo>Project_Spend__c</referenceTo>
        <relationshipLabel>Spend Milestones</relationshipLabel>
        <relationshipName>Spend_Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Spend Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Project_Spend__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPM-{000000000}</displayFormat>
        <label>Spend Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spend Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>